# DRIFT

./: .gitignore  README.md
application/: ts_example.R
application/Covid/: analysis.R  create_plots.R  subset_data.R
application/Elec/: README  arima_on_ts.R  neat_on_ts.R  prep_data_elec.R  res_arima.RDS  res_arima_48.RDS  res_neat.RDS  res_neat_48.RDS  utils.R
application/Survival/: application-survival-resampling.R  effects.R  general.R  helpers.R  plot.R  source.R
application/Survival/data/: fstimes.Rds
application/Wine/: uci-wine-application.R  visualize.R
application/Yeast/: yeast.R  yeastCC.RDS
benchmark/: README.md  benchmark.R
benchmark/benchmark_data/: airfoil.data  boston.data  concrete.data  diabetes.data  energy.data  fish.data  forest_fire.data  ltfsid.data  naval_compressor.data  naval_turbine.data  real.data  wine.data  yacht.data
benchmark/original_data/: Real estate valuation data set.csv  ltfsid.csv
benchmark/results/: airfoil.RDS  concrete.RDS  diabetes.RDS  energy.RDS  fish.RDS  forest_fire.RDS  ltfsid.RDS  naval_compressor.RDS
common/: models.R
figures/: sampling-deeptrafo.R  sampling-example.R
neat/: DESCRIPTION  main.R  neat_model_class.R  toy.R
neat/R/: main.R  neat_model_class.R
neat/python/: README.md  analyse_hyperopt.ipynb  data_loading.py  hp.py  hyperopt.py  initialisation_effect.ipynb  initialization_effect.ipynb  main.py  monolayers.py  neat_model_class.py  pyproject.toml  requirements.txt  tffuns.py  tox.ini  toy.py  toy_chi.py  utils.py
neat/python/output/: airfoil.csv  boston.csv  concrete.csv  diabetes.csv  energy.csv  fish.csv  forest_fire.csv  ltfsid.csv  real.csv  yacht.csv
neat/tests/: toy.R  toy_2.R  toy_3.R  toy_data_X.csv  toy_data_y.csv
simulation/: frequency.R
wine/models/: tram_polr_wine.R
(+1 files in other folders)
