[tool.poetry]
name = "neat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "^2.12.0"
tensorflow-probability = "^0.19.0"
matplotlib = "^3.7.1"
mlflow = "^2.2.2"
pandas = "^2.0.0"
fire = "^0.5.0"
dask = "^2023.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.autoflake]
expand-star-imports = true
ignore-init-module-imports = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.black]
# line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
